# WormChan

./: .gitignore  README.md  WormChan.py  consts.py  hashing_utils.py  main.py  minio_utils.py  pyproject.toml  rand.py  user_utils.py  workers.py
APP/: app_design.py  main.py  pyproject.toml  qt_app.py
APP/cache/: piclist.json
