[tool.poetry]
name = "Wormchan"
version = "0.1.0"
description = ""
authors = ["Tony <SjasFaceMD@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
joblib = "^1.0.0"
loguru = "^0.5.3"
pymongo = "^3.11.3"
jose = "^1.0.0"
fastapi = "^0.63.0"
passlib = "^1.7.4"
typing = "^3.7.4"
minio = "^7.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
